# marvin-chess-ai

./: .gitignore
.github/workflows/: ci.yml  release.yml
cpp/: CMakeLists.txt  encoding.hpp  main.cpp
inference/: encoding.py  engine_logic.py
